<resources>
    <string name="app_name">FilmsCollection</string>
    <string name="Film_Name_1">Название фильма</string>
    <string name="Button_Detaly">Детали</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textDescription">Пример текста описания фильма</string>
    <string name="film_1">Соловей разбойник</string>
    <string name="film_2">Джунгли</string>
    <string name="film_3">Добро пожаловать в Zомбилэнд</string>shooser_title
    <string name="film_4">Выпускной</string>
    <string name="shooser_title">Поделиться</string>
    <string name="text_film_1">История о дерзком романтике
        Соловьёве Севастьяне Григорьевиче, cтупившем по зову
        крови на лихую стезю русского разбоя. И пока спецслужбы
        во главе с секретным агентом Н7 пытаются ликвидировать банду
        Соловья-Разбойника, он, со свойственным ему драйвом и озорством,
        восстанавливает в родном краю справедливость. Но рано или поздно
        любой «сказке» приходит конец….</string>
    <string name="text_film_2">У Сергея и Марины в семейной
        жизни наступил кризис. Во время одной из ссор, они
        решают поехать в экзотическое путешествие. Всю дорогу
        между супругами не утихают ссоры, которые в конце концов
        приводят к тому, что они оказываются на необитаемом острове,
        затерянном в океане. Вместо того чтобы вместе бороться за выживание,
        наши герои продолжают выяснять отношения, постепенно переходя к
        настоящим боевым действиям. В довершение несчастий оказывается,
        что остров населен племенем воинствующих туземцев.</string>
    <string name="text_film_3">После нашествия зомби в США небольшая группа выживших
        скитается по стране от побережья к побережью, сражаясь
        с живыми мертвецами. Они решают остановиться в парке
        развлечений, надеясь, что там будут в безопасности.</string>
    <string name="text_film_4">Ученики 11 «А» готовятся к
        выпускному по-разному: рэперы снимают клип, главный
        дебошир закупает алкоголь, девственник готовится к первому
        сексу, а влюбленный собирается сделать предложение. Они мечтают
        о будущем и строят планы на жизнь без опеки родителей. «Эту ночь
        ты не забудешь никогда!» —
        однозначный настрой одноклассников. Но у родителей выпускников
        свои взгляды на праздник, и вечеринка, которую школьники ждали 11 лет,
        становится настоящей войной поколений.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главный экран</string>
    <string name="menu_app">О приложении</string>

    <string name="Cool">Отлично</string>
    <string name="good">Хорошо</string>
    <string name="like">Нравится</string>
    <string name="your_comment">Ваш коментарий</string>
    <string name="like_my_fr">Нравится моей подруге</string>
    <string name="add_film">Добавить фильм</string>

</resources>