<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_linear"

    android:background="@color/my_grey_background">
<androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/Theme.FilmsCollection"
        app:titleTextColor="@color/my_white"
        app:subtitleTextColor="@color/my_white"
        app:title="@string/app_name"
        android:id="@+id/toolbar"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/subLinear"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/my_grey_linear"
            android:padding="5dp"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/f_1"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/film_1"
                    android:textSize="16sp"
                    android:textColor="@color/my_white"/>
                <Button
                    android:id="@+id/B_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Button_Detaly"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/my_grey_linear"
            android:padding="5dp"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/f_2"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/film_2"
                    android:textSize="16sp"
                    android:textColor="@color/my_white"/>
                <Button
                    android:id="@+id/B_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Button_Detaly"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/my_grey_linear"
            android:padding="5dp"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/f_3"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/film_3"
                    android:textSize="16sp"
                    android:textColor="@color/my_white"/>
                <Button
                    android:id="@+id/B_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Button_Detaly"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/my_grey_linear"
            android:padding="5dp"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/f_4"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/film_4"
                    android:textSize="16sp"
                    android:textColor="@color/my_white"/>
                <Button
                    android:id="@+id/B_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Button_Detaly"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>